@@ -328,19 +328,3 @@
 		return $result;
 	}
 	
-	function group_tools_action_handler($hook, $type, $return_value, $params){
-		$result = $return_value;
-		
-		if($type == "groups/edit"){
-			// group creation can be limited, but editing isn't
-			if(group_tools_is_group_creation_limited()){
-				if(!get_input("group_guid") && !elgg_is_admin_logged_in()){
-					// trying to create a group, but you're not an admin
-					$result = false;
-				}
-			}
-		}
-		
-		return $result;
-	}
-	
